# NeutCellSelector

./: README.md  pyproject.toml  requirements.txt
data/: generate_demo_data.py
src/neutcellselector/: __init__.py  pipeline.py  predict.py  train.py
tests/: test_pipeline.py
