[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neutcellselector"
version = "0.1.0"
description = "Logistic-regression pipeline for low-quality neutrophil detection in scRNA-seq"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "joblib>=1.3",
  "pyyaml>=6.0",
  "anndata>=0.10"
]

[project.scripts]
neut-train = "neutcellselector.train:main"
neut-predict = "neutcellselector.predict:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
